run.sh adjusted